# INTERSECT_packaging

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.md
tests/: test_rescale.py
